--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,111 +3,131 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{oswald2013diversity,
+  title={Diversity of layer 5 projection neurons in the mouse motor cortex},
+  author={Oswald, Manfred J and Tantirigama, Malinda LS and Sonntag, Ivo and Hughes, Stephanie M and Empson, Ruth M},
+  journal={Frontiers in cellular neuroscience},
+  volume={7},
+  pages={174},
+  year={2013},
+  publisher={Frontiers Media SA}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{tantirigama2014expression,
+  title={Expression of the developmental transcription factor Fezf2 identifies a distinct subpopulation of layer 5 intratelencephalic-projection neurons in mature mouse motor cortex},
+  author={Tantirigama, Malinda LS and Oswald, Manfred J and Duynstee, Celine and Hughes, Stephanie M and Empson, Ruth M},
+  journal={Journal of Neuroscience},
+  volume={34},
+  number={12},
+  pages={4303--4308},
+  year={2014},
+  publisher={Society for Neuroscience}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{empson2015combined,
+  title={Combined Immunochemistry and Live Imaging of Fluorescent Protein Expressing Neurons in Mouse Brain},
+  author={Empson, Ruth M and Tantirigama, Malinda LS and Oswald, Manfred J and Hughes, Stephanie M and Kn{\"o}pfel, Thomas},
+  journal={Immunocytochemistry and Related Techniques},
+  pages={357--373},
+  year={2015},
+  publisher={Springer New York}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
+@article{tantirigama2016fezf2,
+  title={Fezf2 expression in layer 5 projection neurons of mature mouse motor cortex},
+  author={Tantirigama, Malinda LS and Oswald, Manfred J and Clare, Alison J and Wicky, Hollie E and Day, Robert C and Hughes, Stephanie M and Empson, Ruth M},
+  journal={Journal of Comparative Neurology},
+  volume={524},
+  number={4},
+  pages={829--845},
+  year={2016}
+}
+
+@article{tantirigama2017spontaneous,
+  title={Spontaneous activity in the piriform cortex extends the dynamic range of cortical odor coding},
+  author={Tantirigama, Malinda LS and Huang, Helena H-Y and Bekkers, John M},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={9},
+  pages={2407--2412},
+  year={2017},
+  publisher={National Academy of Sciences}
+}
+
+@inproceedings{tantirigama2015changes,
+  title={Changes in odour coding across the input layer of the mouse piriform cortex in vivo},
+  author={Tantirigama, M and Bekkers, J},
+  booktitle={JOURNAL OF NEUROCHEMISTRY},
+  volume={134},
+  pages={164--164},
+  year={2015},
+  organization={WILEY-BLACKWELL 111 RIVER ST, HOBOKEN 07030-5774, NJ USA}
+}
+
+@article{gerrard2018pre,
+  title={Pre-and postsynaptic activation of GABAB receptors modulates principal cell excitation in the piriform cortex},
+  author={Gerrard, Leah B and Tantirigama, Malinda LS and Bekkers, John M},
+  journal={Frontiers in Cellular Neuroscience},
+  volume={12},
+  pages={28},
+  year={2018},
+  publisher={Frontiers Media SA}
+}
+
+@article{tantirigama2020perspective,
+  title={Perspective on the multiple pathways to changing brain states},
+  author={Tantirigama, Malinda LS and Zolnik, Timothy and Judkewitz, Benjamin and Larkum, Matthew E and Sachdev, Robert NS},
+  journal={Frontiers in systems neuroscience},
+  volume={14},
+  pages={23},
+  year={2020},
+  publisher={Frontiers Media SA}
+}
+
+@article{berlage2021deep,
+  title={Deep tissue scattering compensation with three-photon F-SHARP},
+  author={Berlage, Caroline and Tantirigama, Malinda LS and Babot, Mathias and Di Battista, Diego and Whitmire, Clarissa and Papadopoulos, Ioannis N and Poulet, James FA and Larkum, Matthew and Judkewitz, Benjamin},
+  journal={Optica},
+  volume={8},
+  number={12},
+  pages={1613--1619},
+  year={2021},
+  publisher={Optica Publishing Group}
+}
+
+@article{suzuki2021multi,
+  title={Multi-functional feedforward inhibitory circuits for cortical odor processing},
+  author={Suzuki, Norimitsu and Tantirigama, Malinda LS and Huang, Helena H-Y and Bekkers, John M},
+  journal={bioRxiv},
+  pages={2021--09},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{suzuki2022fast,
+  title={Fast and slow feedforward inhibitory circuits for cortical odor processing},
+  author={Suzuki, Norimitsu and Tantirigama, Malinda LS and Aung, K Phyu and Huang, Helena HY and Bekkers, John M},
+  journal={Elife},
+  volume={11},
+  pages={e73406},
+  year={2022},
+  publisher={eLife Sciences Publications Limited}
+}
+
+@inproceedings{lo2022binge,
+  title={Binge eating suppresses flavor representations in the mouse olfactory cortex},
+  author={Lo, Hung and Schonherr, Anke and Tantirigama, Malinda LS and Sachdev, Robert and Stumpenhorst, Katharina and Rivalan, Marion and Winter, York and Schmitz, Dietmar and Johenning, Friedrich},
+  booktitle={CHEMICAL SENSES},
   volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
+  year={2022},
+  organization={OXFORD UNIV PRESS GREAT CLARENDON ST, OXFORD OX2 6DP, ENGLAND}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{tantirigama2023binge,
+  title={Binge Feeding Promotes Appetite via Modulating Olfactory Flavor Representation},
+  author={Tantirigama, Malinda LS and Schoenherr, Anke and Moreno-Velasquez, Laura and Faiss, Lukas and Rost, Benjamin R and Larkum, Matthew E and Judkewitz, Benjamin and Stumpenhorst, Katharina and Rivalan, Marion and Winter, York and others},
+  journal={bioRxiv},
+  pages={2023--10},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
 }
