--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @article{oswald2013diversity,
+  abbr={FrontNeuro},
   title={Diversity of layer 5 projection neurons in the mouse motor cortex},
   author={Oswald, Manfred J and Tantirigama, Malinda LS and Sonntag, Ivo and Hughes, Stephanie M and Empson, Ruth M},
   journal={Frontiers in cellular neuroscience},
@@ -14,6 +15,7 @@
 }
 
 @article{tantirigama2014expression,
+  abbr={JNeuro},
   title={Expression of the developmental transcription factor Fezf2 identifies a distinct subpopulation of layer 5 intratelencephalic-projection neurons in mature mouse motor cortex},
   author={Tantirigama, Malinda LS and Oswald, Manfred J and Duynstee, Celine and Hughes, Stephanie M and Empson, Ruth M},
   journal={Journal of Neuroscience},
@@ -25,6 +27,7 @@
 }
 
 @article{empson2015combined,
+  abbr={Method},
   title={Combined Immunochemistry and Live Imaging of Fluorescent Protein Expressing Neurons in Mouse Brain},
   author={Empson, Ruth M and Tantirigama, Malinda LS and Oswald, Manfred J and Hughes, Stephanie M and Kn{\"o}pfel, Thomas},
   journal={Immunocytochemistry and Related Techniques},
@@ -34,6 +37,7 @@
 }
 
 @article{tantirigama2016fezf2,
+  abbr={JCompNeuro},
   title={Fezf2 expression in layer 5 projection neurons of mature mouse motor cortex},
   author={Tantirigama, Malinda LS and Oswald, Manfred J and Clare, Alison J and Wicky, Hollie E and Day, Robert C and Hughes, Stephanie M and Empson, Ruth M},
   journal={Journal of Comparative Neurology},
@@ -44,6 +48,7 @@
 }
 
 @article{tantirigama2017spontaneous,
+  abbr={PNAS},
   title={Spontaneous activity in the piriform cortex extends the dynamic range of cortical odor coding},
   author={Tantirigama, Malinda LS and Huang, Helena H-Y and Bekkers, John M},
   journal={Proceedings of the National Academy of Sciences},
@@ -55,6 +60,7 @@
 }
 
 @inproceedings{tantirigama2015changes,
+  abbr={JNChem},
   title={Changes in odour coding across the input layer of the mouse piriform cortex in vivo},
   author={Tantirigama, M and Bekkers, J},
   booktitle={JOURNAL OF NEUROCHEMISTRY},
@@ -65,6 +71,7 @@
 }
 
 @article{gerrard2018pre,
+  abbr={FrontNeuro},
   title={Pre-and postsynaptic activation of GABAB receptors modulates principal cell excitation in the piriform cortex},
   author={Gerrard, Leah B and Tantirigama, Malinda LS and Bekkers, John M},
   journal={Frontiers in Cellular Neuroscience},
@@ -75,16 +82,19 @@
 }
 
 @article{tantirigama2020perspective,
+  abbr={FrontNeuro},
   title={Perspective on the multiple pathways to changing brain states},
   author={Tantirigama, Malinda LS and Zolnik, Timothy and Judkewitz, Benjamin and Larkum, Matthew E and Sachdev, Robert NS},
   journal={Frontiers in systems neuroscience},
   volume={14},
   pages={23},
   year={2020},
+  preview={Brain_colour2-animation3.gif},
   publisher={Frontiers Media SA}
 }
 
 @article{berlage2021deep,
+  abbr={Optica},
   title={Deep tissue scattering compensation with three-photon F-SHARP},
   author={Berlage, Caroline and Tantirigama, Malinda LS and Babot, Mathias and Di Battista, Diego and Whitmire, Clarissa and Papadopoulos, Ioannis N and Poulet, James FA and Larkum, Matthew and Judkewitz, Benjamin},
   journal={Optica},
@@ -92,10 +102,12 @@
   number={12},
   pages={1613--1619},
   year={2021},
+  preview={Brain_colour2-animation3-crop.gif},
   publisher={Optica Publishing Group}
 }
 
 @article{suzuki2021multi,
+  abbr={bioRxiv},
   title={Multi-functional feedforward inhibitory circuits for cortical odor processing},
   author={Suzuki, Norimitsu and Tantirigama, Malinda LS and Huang, Helena H-Y and Bekkers, John M},
   journal={bioRxiv},
@@ -105,6 +117,7 @@
 }
 
 @article{suzuki2022fast,
+  abbr={Elife},
   title={Fast and slow feedforward inhibitory circuits for cortical odor processing},
   author={Suzuki, Norimitsu and Tantirigama, Malinda LS and Aung, K Phyu and Huang, Helena HY and Bekkers, John M},
   journal={Elife},
@@ -115,6 +128,7 @@
 }
 
 @inproceedings{lo2022binge,
+  abbr={ChemSenses},
   title={Binge eating suppresses flavor representations in the mouse olfactory cortex},
   author={Lo, Hung and Schonherr, Anke and Tantirigama, Malinda LS and Sachdev, Robert and Stumpenhorst, Katharina and Rivalan, Marion and Winter, York and Schmitz, Dietmar and Johenning, Friedrich},
   booktitle={CHEMICAL SENSES},
@@ -124,6 +138,7 @@
 }
 
 @article{tantirigama2023binge,
+  abbr={bioRxiv},
   title={Binge Feeding Promotes Appetite via Modulating Olfactory Flavor Representation},
   author={Tantirigama, Malinda LS and Schoenherr, Anke and Moreno-Velasquez, Laura and Faiss, Lukas and Rost, Benjamin R and Larkum, Matthew E and Judkewitz, Benjamin and Stumpenhorst, Katharina and Rivalan, Marion and Winter, York and others},
   journal={bioRxiv},
